2009-01-18 Nicolas Roard <nicolas@roard.com>
 	Refactoring...
	* split the LK* categories with the pretty printer in two smalltalk files
	* some modifications in the pretty printer

2009-01-18 Nicolas Roard <nicolas@roard.com>
	* Moves the NSFont -italic category from main.m to PrettyPrint.st

2009-01-18 Nicolas Roard <nicolas@roard.com>
	* Moves the LKMessageSend -prettyprintToWriter to PrettyPrint.st

2009-01-18 Nicolas Roard <nicolas@roard.com>
	* Implemented a partial syntax highlighting / formatting
	  (based on guenther's PrettyPrint.st code)

2009-01-17 Nicolas Roard <nicolas@roard.com>
	* Refactored the code to use the new visitor code that David committed today.
	  We now use ASTModel (a visitor) to extract the info from the ast
	* Added a ASTTransform class to do a simple AST transformation (will be
	  used for the adding/removing ivars at runtime)

2009-01-16 Nicolas Roard <nicolas@roard.com>
	Fixed a segfault when applying categories on classes never
	instanciated

2009-01-16 Nicolas Roard <nicolas@roard.com>
	Early work to directly use the AST from LanguageKit:
	* Load .st file, extracts the full AST via LK and populate ModelClass with it
	* Added accessors to LK classes (for the moments as categories)
	* Modifs in the Gorm file to have a textfield for the method's signature
	* Fixed a wrong commit in the Gorm file.
	* Fixed a bug in the properties tableview handling
	* Fixed compilation warning

2009-01-13 Nicolas Roard <nicolas@roard.com>
	Put back the creation panels and added properties
	* Add property code (can add property to a class and use them)
	* Added property adding panel
	* Plugged back class/category adding panels

2009-01-09 Nicolas Roard <nicolas@roard.com>
	Large number of modifications:
	* Refactored the Gorm UI to have different content depending on the context
          (e.g. show a table for the class properties, or a textview for a method)
        * Moved add/remove buttons from the browser's window to menu items